# monadius_fork

./: README.md
doc/: doc.xml  index.html  script.sh
monadius/: destroy.hs  readme-e.txt  readme-j.txt
monadius/src/: Audio.hs  Game.hs  Main.hs  Monadius.hs  Music.hs  Recorder.hs  makefile.bat  monadius.rc
workdir/: workdir.lkshs  workdir.lkshw
workdir/mymonadius/: mymonadius.cabal
workdir/mymonadius/src/: Audio.hs  Demo.hs  Main.hs  Util.hs  stub.c
